--- a/AnimalSitter/config.json
+++ b/AnimalSitter/config.json
@@ -1,15 +1,16 @@
 {
   "KeyBind": "O",
-  "GrowUpEnabled": true,
-  "MaxHappinessEnabled": true,
-  "MaxFullnessEnabled": true,
+  "GrowUpEnabled": false,
+  "MaxHappinessEnabled": false,
+  "MaxFullnessEnabled": false,
   "HarvestEnabled": true,
   "PettingEnabled": true,
-  "MaxFriendshipEnabled": true,
-  "CostPerAction": 1,
+  "PettingPetEnabled": true,
+  "MaxFriendshipEnabled": false,
+  "CostPerAction": 25,
   "WhoChecks": "spouse",
   "EnableMessages": true,
-  "TakeTrufflesFromPigs": true,
+  "TakeTrufflesFromPigs": false,
   "BypassInventory": false,
   "ChestCoords": "73, 14",
   "ChestDefs": ""
